--- a/frontend/src/components/pages/Profile/ProfilePic/ProfilePic.module.css
+++ b/frontend/src/components/pages/Profile/ProfilePic/ProfilePic.module.css
@@ -6,9 +6,6 @@
   width: 100%;
   pointer-events: none;
 }
-.pfpAlignFlex > * {
-  pointer-events: auto;
-}
 .pfpContainer {
   margin-bottom: 10px;
   min-width: 110px;
@@ -26,6 +23,7 @@
   cursor: pointer;
   border: solid 2px transparent;
   transition: border 0.3s ease;
+  pointer-events: auto;
 }
 .profilePic:hover {
   border: solid 2px rgb(80, 223, 255);
